# FB2Translator

./: Brin_D._Vozvyishenie1._Pogrujenie_V_Solnce.fb2  Kyunsken_D._Fanzonnashvyibor._Kvantovyiyi_Sad.fb2  Translator.py  pyproject.toml
tests/: test_fb2translator.py
